# FreeCAD-MCP

./: .gitignore  CHANGELOG.md  HOTFIX.md  IMPLEMENTATION_SUMMARY.md  InitGui.py  README.md  SECURITY_VALIDATION.md  config.json  config.py  demo_validation.py  freecad_mcp_server.py  measurement_handlers.py  package.xml  pyproject.toml  start.sh  templates.py  test_validation.py
docs/: API.md  ARCHITECTURE_COMPARISON.md  DEVELOPMENT.md  LLM_AUTONOMY_RECOMMENDATIONS.md  PARTS_LIBRARY_WORKAROUND.md  QUICK_START_V0.3.0.md  ROADMAP_V0.3.0.md  USAGE_LOG_ANALYSIS.md  V0.3.0_IMPLEMENTATION_SUMMARY.md  V0.3.0_RELEASE_NOTES.md
src/: freecad_mcp_client.py
tests/: __init__.py  test_client.py  test_utils.py
