[project]
name = "FreeCAD-MCP"
version = "0.1.0"
description = "FreeCAD integration through the Model Context Protocol"
authors = [
    {name = "ATOI-ming", email = "1757772673@qq.com"}
]
dependencies = [
    "mcp-server>=0.1.4",
    "httpx>=0.24.1"
]
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[project.scripts]
freecad-mcp = "freecad_mcp.server:main"

[tool.pdm.dev-dependencies]
dev = [
    "pytest>=7.4.0",
    "black>=23.7.0",
    "isort>=5.12.0",
    "mypy>=1.5.1",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"

[tool.black]
line-length = 100
target-version = ['py310']

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false

[project.urls]
"Homepage" = "https://github.com/ATOI-Ming/FreeCAD-MCP"
"Bug Tracker" = "https://github.com/ATOI-Ming/FreeCAD-MCP/issues"


